<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/num1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_first" />

    <EditText
        android:id="@+id/num1_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="number"/>


    <TextView

        android:id="@+id/opeartion_text_view"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_operation" />

    <EditText
        android:id="@+id/operation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="text"/>

    <TextView

        android:id="@+id/num2_text_view"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/input_second" />

    <EditText
        android:id="@+id/num2_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="number"/>

    <Button
        android:id="@+id/calculcate_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <TextView

        android:id="@+id/result_text_view"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/result"
        />
</LinearLayout>